# final_project

./: .gitignore  CMakeLists.txt  color.cpp  marker2.cpp  marker2_test.cpp  marker2_test2.cpp  roviData.m  test.cpp  visionHelperFuncs.hpp
SamplePluginPA10/libs/Release/: rwsettings.xml
SamplePluginPA10/src/: SamplePlugin.cpp  SamplePlugin.hpp  SamplePlugin.ui  functions.h  vision_color_marker.hpp
trackDataPos/: toolPosFile_1marker_Fast_0.100000.csv  toolPosFile_1marker_Medi_0.050000.csv  toolPosFile_1marker_Slow_0.050000.csv  toolPosFile_3markers_Fast_0.050000.csv  toolPosFile_3markers_Fast_0.100000.csv  toolPosFile_3markers_Medi_0.050000.csv  toolPosFile_3markers_Slow_0.050000.csv
trackDataVision/: qFile_vis_Fast_0.010000.csv  qFile_vis_Fast_0.040000.csv  qFile_vis_Fast_0.140000.csv  qFile_vis_Fast_0.950000.csv  qFile_vis_Medi_0.740000.csv  qFile_vis_Medi_0.950000.csv  qFile_vis_Slow_0.440000.csv  toolPosFile_vis_Fast_0.010000.csv  toolPosFile_vis_Fast_0.040000.csv  toolPosFile_vis_Fast_0.190000.csv  toolPosFile_vis_Medi_0.240000.csv  toolPosFile_vis_Slow_0.690000.csv  trackErrorFile_vis_Fast_0.010000.csv  trackErrorFile_vis_Fast_0.040000.csv  trackErrorFile_vis_Fast_0.840000.csv  trackErrorFile_vis_Medi_0.640000.csv  trackErrorFile_vis_Slow_0.090000.csv
